syntax = "proto3";

package com.unlp.pdtr.app;

import "google/protobuf/timestamp.proto";

message DBRequest {
    string road = 1;
    string region = 2;
    google.protobuf.Timestamp time = 3;
    string comment = 4;
}

message DBResponse {
    google.protobuf.Timestamp time = 1;
}


service DatabaseService {
    rpc storeInDatabase(stream DBRequest) returns (DBResponse);
}
