syntax = "proto3";

package com.unlp.pdtr.app;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message UserRequest {
    double lat = 1;
    double long = 2;
    string department = 3;
    google.protobuf.Timestamp time = 4;
    string measure = 5;
    uint32 value = 6;
}


service UserService {
    rpc storeTrafficData(stream UserRequest) returns (google.protobuf.Empty) {}
}
