syntax = "proto3";

package com.unlp.pdtr.app;

import "google/protobuf/timestamp.proto";

message WebSocketRequest {
    string road = 1;
    string region = 2;
    google.protobuf.Timestamp time = 3;
    string comment = 4;
}

message WebSocketResponse {
    google.protobuf.Timestamp time = 1;
}

service WebSocketService {
    rpc showContent(stream WebSocketRequest) returns (WebSocketResponse);
}
